--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
 								<p>Hello!!</p>
 								<p>I am Md.Saif Ahmad, done Diploma from Electrical Engineering department at Jamia Millia Islamia(2015-2018). I posses good knowledge in Internet Of Things(IOT). All I want is a platform where I can harness my technical skills. </p>
 								<p>I am seeking employment with a company where I can grow professionally and personally and use my experience and education to help the company meet and surpass its goals.</p>
-								<p>In college, I was the part of college Basketball Team which won many tournaments at university level.</p>
+								<p>In college, I was the part of college Basketball Team which won many tournaments at college level.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Internship</h2>
-								<ul><li>Completed 1 year Internship at Indian Oil Corporation.
-									<p> During Internship, I worked on the conceptualization of Electrical apprenticeship as a junior Electrical Engineer. </p> </li></ul>
-								<ul><li>Completed 1 year Internship at Harduaganj Thermal Power Station,Aligarh, Uttar Pradesh.
-									<p> During Internship, I learnt about the working of the system and equipments of the Power station. 
+								<ul><li>Completed 1 year Apprenticeship at Indian Oil Corporation.
+									<p> During Apprenticeship, I worked on the conceptualization of Electrical apprenticeship as a junior Electrical Engineer. </p> </li></ul>
+								<ul><li>Completed 1 month Training at Harduaganj Thermal Power Station,Aligarh, Uttar Pradesh.
+									<p> During Training, I learnt about the working of the system and equipments of the Power station. 
 										I also learnt about generating and transmitting electrical power.  </p></li></ul>
 							</article>
 
